# test-qt-project

./: AppThemes.qml  AppThemesPrivate.qml  CMakeLists.txt  CNAME  LargeButton.qml  Main.qml  MainMenu.qml  index.html  main.cpp
